# whisper-diarization

./: README.md  pyproject.toml
.github/workflows/: test_run.yml
